Fix default color issue on iOS

--- a/client/src/features/readArticle/components/MenuDropdown.styles.sass
+++ b/client/src/features/readArticle/components/MenuDropdown.styles.sass
@@ -6,6 +6,8 @@
     display: flex
     justify-content: flex-start
     gap: 10%
+    color: App.$charcoal
+    align-items: center
     &.danger
         color: red
         &:hover
